# fvm-example

./: Cargo.toml  README.md  build.rs  metadata.json
fvm-macro/: Cargo.toml
fvm-macro/codegen/: Cargo.toml
fvm-macro/codegen/src/: lib.rs  traits.rs
fvm-macro/codegen/src/generator/: contract.rs  item_impls.rs  mod.rs  state.rs
fvm-macro/contract/: Cargo.toml
fvm-macro/contract/src/: lib.rs
fvm-macro/ir/: Cargo.toml
fvm-macro/ir/src/: lib.rs
fvm-macro/ir/src/ir/: attrs.rs  blake2.rs  contract.rs  item_mod.rs  mod.rs  selector.rs  utils.rs
fvm-macro/ir/src/ir/item/: event.rs  mod.rs  state.rs
fvm-macro/ir/src/ir/item_impl/: callable.rs  constructor.rs  impl_item.rs  iter.rs  message.rs  mod.rs
fvm-macro/src/: lib.rs
src/: lib.rs
