[package]
name = "fvm-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm-macro = { path = './fvm-macro' }
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
fvm = "0.5.1"
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
wasmtime = "0.35.2"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"