[package]
name = "fvm-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.20"
syn = { features = ["parsing", "full", "visit", "extra-traits"] }
proc-macro2 = "1.0.40"
fvm-ir = { path = "./ir" }
contract = { path = "./contract" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"

cid = { version = "0.8.4", default-features = false }
fvm_sdk = "0.6.0"
fvm_shared = "0.6.0"
fvm_ipld_blockstore = "0.1.0"
fvm_ipld_encoding = "0.1.0"
anyhow = "1.0.56"



