[package]
name = "fvm_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.20"
syn = { features = ["full", "extra-traits"] }
proc-macro2 = "1.0.40"
blake2 = "0.10.4"
itertools = "0.10.3"
either = '1.6.1'
fvm-ir = { path = "../ir" }
derive_more = { version = "0.99", default-features = false, features = ["from"] }
heck = '0.4.0'
cid = { version = "0.8.4", default-features = false }
fvm_sdk = "0.6.0"
fvm_shared = "0.6.0"