[package]
name = "fvm-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.20"
syn = { features = ["parsing", "full", "visit", "extra-traits"] }
proc-macro2 = "1.0.40"
blake2 = "0.10.4"
itertools = "0.10.3"
either = '1.6.1'
